[tool.poetry]
name = "spellbook_github_stats"
version = "0.0.1"
description = ""
authors = ["masquot"]
readme = "README.md"
packages = [{include = "spellbook_github_stats"}]


[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
duckdb = "^0.7.1"
duckdb-engine = "^0.7.0"
requests = "^2.29.0"

[tool.poetry.group.test]  # This part can be left out

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[tool.dagster]
module_name = "spellbook_github_stats"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
